- make the inclusion of NO_META dependent on the version of EU::MM.
  I was going to include a META.yml but EU::MM's generation is too 
  simplistic (and misses the leading document header too).  For now
  I'll leave it out.
- built 0.43_03 for testing

0.44 Wed 15 Dec 2004
- modify the default include directories list to include the location
  FreeBSD keeps freetype1 headers after the freetype2 locations.
  This ensures that the -I options are generated with freetype2
  locations first, so that those directories are searched before
  the freetype1 directories.  This prevents problems compiling
  font.c on FreeBSD.
  Resolves: http://rt-cpan.fsck.com/Ticket/Display.html?id=1723
- finish off a sentence in the "Producing an image from a CGI script"
  example in Imager::Files
- method index didn't include errstr()
- document that you don't want the FT2 freetype.h in the include path

0.44_01
- the plugins Makefile has long produced an error after all tests were
  complete on Win32, finally tracked down why
- Makefile.PL now checks the directories specified by $Config{locincpth}
  and $Config{loclibpth} for includes and libraries respectively.
  Resolves: https://rt.cpan.org/Ticket/Display.html?id=2942
- we were undefing the wrong macro (used as an include guard) when
  building the error code translation function for freetype 2.  This
  meant most errors came out as numbers.
- add a note to the README on how to get font suitcases and dfont files
  working on OS X.
- add dfont to the list of extensions supported by ft2
- document Imager::Font->new()'s index parameter
- added concept index to Imager.pm's POD
- the gradgen filter now does the same color value conversion that
  Imager's drawing functions do.

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
